ingress-oauth2-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'  # Deshabilita redirección SSL en local
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization,X-Auth-Request-Email,X-Auth-Request-Redirect,X-Auth-Request-Access-Token"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Authorization $http_authorization;
      proxy_set_header X-Auth-Request-Email $http_x_auth_request_email;
      proxy_set_header X-Auth-Request-Redirect $request_uri;
spec:
  ingressClassName: nginx
  rules:
  - host: proxy.kcd-antigua.com  # Debe coincidir con /etc/hosts
    http:
      paths:
      - path: /oauth2(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
